# ecomify-backend

./: pyproject.toml
apps/products/: admin.py  models.py  serializers.py  urls.py  views.py
apps/products/migrations/: 0001_initial.py  0002_especificacion_productoimagen.py  0003_remove_producto_imagen_alter_producto_descripcion_and_more.py  0004_remove_especificacion_titulo_and_more.py
apps/users/: permissions.py  urls.py  user_manager.py
apps/users/migrations/: 0001_initial.py  0002_create_roles.py
apps/users/models/: user.py
apps/users/serializers/: jwt.py  me.py  register.py
apps/users/views/: jwt.py  me.py  register.py
config/: settings.py  urls.py
